backend/com.renthub/k8s/overlays/dev/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: renthub-backend
spec:
  template:
    spec:
      containers:
      - name: renthub-backend
        args:
          - "--spring.profiles.active=dev"
