backend/com.renthub/k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: renthub-backend
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - renthub-dev.reco6.com
    secretName: renthub-dev-tls
  rules:
  - host: renthub-dev.reco6.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: renthub-backend
            port:
              number: 80
